--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Shidhu01.github.io/dummy-react-project",
+  "homepage": "https://shidhu348.github.io/dummy-react-project",
   "name": "react-project",
   "version": "0.1.0",
   "private": true,
